--- a/serverless.yml
+++ b/serverless.yml
@@ -1,8 +1,9 @@
-service: node8-serverless
+service: serverless-cloudlocal-invoke
 frameworkVersion: '>=1.2.0 <2.0.0'
 provider:
   name: aws
   runtime: nodejs8.10
+  profile: test
 plugins:
   - serverless-iam-roles-per-function
   - serverless-cf-vars
